--- a/deploy/index.html
+++ b/deploy/index.html
@@ -257,7 +257,7 @@
 
     <section id="quote">
         <div>
-              <h1>“When eating choose the place, when playing choose your friends.”
+              <h1 class="bigquote">“When eating choose the place, when playing choose your friends.”
         </h1>
         <h2>- Vietnamese Proverbs</h2>
         </div>
@@ -357,19 +357,19 @@
                 <aside id="gallery">
     
                     <ul>
-                        <li id="h1">
+                        <li id="h1" class="gallery-image">
                             <img src="img/human/thanh-long.jpg" alt="dragon fruit">
                         </li>
-                        <li id="h2">
+                        <li id="h2" class="gallery-image">
                             <!-- <img src="img/human/kids.jpg" alt="kids"> -->
                         </li>
-                        <li id="h3">
+                        <li id="h3" class="gallery-image">
                             <!-- <img src="img/human/ta-hien.jpg" alt="ta hien street"> -->
                         </li>
-                        <li id="h4">
+                        <li id="h4" class="gallery-image">
                             <!-- <img src="img/human/got-su-hao.png" alt="cabbage cart"> -->
                         </li>
-                        <li id="h5">
+                        <li id="h5" class="gallery-image">
                             <!-- <img src="img/human/xich-lo-2.jpg" alt="xich-lo-2"> -->
                         </li>
                     </ul>
