figuring things out

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -93,6 +93,7 @@
 
     <main class="grey">
         <div>
+         @import "../global/header.kit"
          <section id="hero">
              <div>
          
