--- a/deploy/index.html
+++ b/deploy/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <main class="grey">
-        <section id="cover-up"></section>
+        <!-- <section id="cover-up"></section> -->
         <div>
          <header id="header">
              <div>
